Activity summary viz (#54)
* using observations from both entities in a given interaction

* analysis for segments in place, api for segments utilizing interaction period models stored in db

* removed print statement

* appending ips to output

* added viz file

* getting interaction periods generator working

* moved segment variables for calculating segments to constants

* tested and working

* viz working, cleanup needed

* added datepicker restrictions, cleaned up some code, added api docs for interaction_totals

* added interaction_periods api info

* interaction periods will only be generated back one day if none exist

* fixed bad index call and removed unused variable
